package com.tfg.inazuma.model;

public enum CardPackage {
    INAZUMA_ELEVEN,
    INAZUMA_ELEVEN_GO
}
